# kyivfprog-2016-folds

./: folds.md  folds_typora.html  folds_typora.md  gen.sh  some_links.md
fold-stats/: fold-stats.cabal  stack.yaml
fold-stats/src/: Main.hs
