name:                fold-stats
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/k-bx/fold-stats#readme
license:             BSD3
license-file:        LICENSE
author:              Kostiantyn Rybnikov
maintainer:          k-bx@k-bx.com
copyright:           Kostiantyn Rybnikov <k-bx@k-bx.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable fold-stats
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , classy-prelude
                     , deepseq
                     , foldl
                     , hashable
                     , hashable-time
                     , monoidal-containers
                     , pipes
                     , transformers
                     , riak
                     , string-class
                     , text
                     , time
                     , unordered-containers
                     , uuid
